--- a/_extensions/academicons/_extension.yml
+++ b/_extensions/academicons/_extension.yml
@@ -1,6 +1,6 @@
-title: Support for academicons
-author: David Schoch
-version: 0.4.0
+title: Support for Scholaricons
+author: Trey Saddler
+version: 0.1.0
 contributes:
   shortcodes:
-    - academicons.lua
+    - scholaricons.lua
